--- a/crowfest98.com/test_index.html
+++ b/crowfest98.com/test_index.html
@@ -3,10 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   <title>Crow Fest '98</title>
-
-  <!-- Include Ruffle -->
+  <script src="js/rmLoader.js"></script>
   <script src="js/ruffle.js"></script>
-
   <style type="text/css">
     body, td, th {
       font-size: x-small;
@@ -20,6 +18,11 @@
       color: #FFFFFF;
       font-family: Arial, Helvetica, sans-serif;
     }
+    .style4 {
+      color: #FFFFFF;
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: x-small;
+    }
     a {
       font-family: Arial, Helvetica, sans-serif;
       font-size: x-small;
@@ -28,24 +31,98 @@
     a:visited, a:hover, a:active {
       color: #FFFFFF;
     }
-    .style4 {
-      color: #FFFFFF;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: x-small;
-    }
   </style>
+</head>
 
-  <script type="text/javascript">
+<body onload="MM_preloadImages('imgs/tree2.gif')">
+  <table width="812" border="0" align="left" cellpadding="0" cellspacing="0">
+    <tr bgcolor="#112116">
+      <td colspan="3"><img src="images/title.jpg" width="812" height="236" alt=""></td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td width="185"><img src="images/Crow.jpg" width="185" height="178" alt=""><br></td>
+      <td width="555"><img src="images/1for2.jpg" width="556" height="174" alt=""></td>
+      <td width="73" align="right">
+        <a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tree','','imgs/tree2.gif',1)">
+          <img src="images/tree.gif" alt="ooooh!" name="tree" width="71" height="174" border="0">
+        </a>
+      </td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td colspan="3">
+        <img src="images/stage1.jpg" width="272" height="342" alt="">
+        <img src="images/stage2.jpg" width="267" height="342" alt="">
+        <img src="images/stage3.jpg" width="273" height="342" alt="">
+      </td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td colspan="3">
+        <img src="images/ad1.jpg" width="404" height="182" alt="">
+        <img src="images/ad2.jpg" width="408" height="182" alt="">
+      </td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td colspan="3">
+        <img src="images/ad3.jpg" width="404" height="217" alt="">
+        <img src="images/ad4.jpg" width="129" height="217" alt="">
+        <img src="images/ad5.jpg" width="279" height="217" alt="">
+      </td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td colspan="3">
+        <table width="812" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td><img src="images/ad6.jpg" width="479" height="130" alt=""></td>
+            <td rowspan="2"><img src="images/foundation.jpg" width="333" height="318" alt=""></td>
+          </tr>
+          <tr>
+            <td><img src="images/ad7.jpg" width="250" height="188" alt=""><img src="images/ad8.jpg" width="229" height="188" alt=""></td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td colspan="3">
+        <br><br>
+        <table width="813" border="0" cellpadding="0" cellspacing="20">
+          <tr>
+            <td width="448" valign="top">
+              <span class="style2">©1998 THE CROW FOUNDATION<br>
+              The information available on this website is by no means the property of the Crow Foundation unless you do not object to it. In that case, yes, we own it.</span>
+            </td>
+            <td width="365" valign="top">
+              <span class="style4">Are you charitable, generous, and a giving young female? Join our Crow's Back Stage Lasses Club. 
+              <a href="#">Click Here</a> for more info, and we'll work with you to find an opening.</span>
+            </td>
+          </tr>
+        </table>
+      </td>
+    </tr>
+    <tr bgcolor="#112116">
+      <td colspan="3">&nbsp;</td>
+    </tr>
+
+    <!-- MUSIC PLAYER SECTION -->
+    <tr bgcolor="#103120">
+      <td colspan="3" align="center">
+        <button onclick="startSWF()" style="margin: 10px; font-size: small;">▶ Play Crow Music</button>
+        <div id="flash-player" style="width: 20px; height: 20px;"></div>
+      </td>
+    </tr>
+  </table>
+
+  <script>
     function MM_preloadImages() {
       var d = document;
       if (d.images) {
         if (!d.MM_p) d.MM_p = [];
         var a = MM_preloadImages.arguments;
-        for (var i = 0; i < a.length; i++)
-          if (a[i].indexOf("#") !== 0) {
+        for (var i = 0; i < a.length; i++) {
+          if (a[i].indexOf("#") != 0) {
             d.MM_p[d.MM_p.length] = new Image();
             d.MM_p[d.MM_p.length - 1].src = a[i];
           }
+        }
       }
     }
 
@@ -71,102 +148,27 @@
     function MM_swapImage() {
       var i, j = 0, x, a = MM_swapImage.arguments;
       document.MM_sr = [];
-      for (i = 0; i < (a.length - 2); i += 3)
+      for (i = 0; i < (a.length - 2); i += 3) {
         if ((x = MM_findObj(a[i])) != null) {
           document.MM_sr[j++] = x;
           if (!x.oSrc) x.oSrc = x.src;
           x.src = a[i + 2];
         }
+      }
+    }
+
+    function startSWF() {
+      const ruffle = window.RufflePlayer?.newest();
+      if (!ruffle) {
+        alert("Ruffle not loaded!");
+        return;
+      }
+      const player = ruffle.createPlayer();
+      const container = document.getElementById("flash-player");
+      container.innerHTML = ""; // Clear previous if any
+      container.appendChild(player);
+      player.load("audio.swf");
     }
   </script>
-</head>
-
-<body onload="MM_preloadImages('imgs/tree2.gif')">
-  <table width="812" height="1609" border="0" align="left" cellpadding="0" cellspacing="0">
-    <tr bgcolor="#112116">
-      <td colspan="3"><img src="images/title.jpg" width="812" height="236"></td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td width="185"><img src="images/Crow.jpg" width="185" height="178"><br></td>
-      <td width="555"><img src="images/1for2.jpg" width="556" height="174"></td>
-      <td width="73" align="right">
-        <a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tree','','imgs/tree2.gif',1)">
-          <img src="images/tree.gif" alt="ooooh!" name="tree" width="71" height="174" border="0">
-        </a>
-      </td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td colspan="3">
-        <img src="images/stage1.jpg" width="272" height="342">
-        <img src="images/stage2.jpg" width="267" height="342">
-        <img src="images/stage3.jpg" width="273" height="342">
-      </td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td colspan="3">
-        <img src="images/ad1.jpg" width="404" height="182">
-        <img src="images/ad2.jpg" width="408" height="182">
-      </td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td colspan="3">
-        <img src="images/ad3.jpg" width="404" height="217">
-        <img src="images/ad4.jpg" width="129" height="217">
-        <img src="images/ad5.jpg" width="279" height="217">
-      </td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td colspan="3">
-        <table width="812" height="318" border="0" cellpadding="0" cellspacing="0">
-          <tr>
-            <td><img src="images/ad6.jpg" width="479" height="130"></td>
-            <td rowspan="2"><img src="images/foundation.jpg" width="333" height="318"></td>
-          </tr>
-          <tr>
-            <td><img src="images/ad7.jpg" width="250" height="188"><img src="images/ad8.jpg" width="229" height="188"></td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td colspan="3">
-        <br><br>
-        <table width="813" height="71" border="0" cellpadding="0" cellspacing="20">
-          <tr valign="middle">
-            <td width="448" valign="top">
-              <span class="style2">
-                ©1998 THE CROW FOUNDATION<br>
-                The information available on this website is by no means the property of the Crow Foundation unless you do not object to it. In that case, yes, we own it.
-              </span>
-            </td>
-            <td width="365" valign="top">
-              <span class="style4">
-                Are you charitable, generous, and a giving young female? Join our Crow's Back Stage Lasses Club.
-                <a href="#">Click Here</a> for more info, and we'll work with you to find an opening.
-              </span>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-    <tr bgcolor="#112116">
-      <td colspan="3"> </td>
-    </tr>
-    <tr bgcolor="#103120">
-      <td colspan="3">
-        <!-- Ruffle Flash Replacement -->
-        <div id="flash-player" style="width: 20px; height: 20px;"></div>
-        <script>
-          window.RufflePlayer = window.RufflePlayer || {};
-          window.addEventListener("DOMContentLoaded", () => {
-            const ruffle = window.RufflePlayer.newest();
-            const player = ruffle.createPlayer();
-            document.getElementById("flash-player").appendChild(player);
-            player.load("audio.swf");
-          });
-        </script>
-      </td>
-    </tr>
-  </table>
 </body>
 </html>
