--- a/crowfest98.com/index.html
+++ b/crowfest98.com/index.html
@@ -1,5 +1,7 @@
-<!DOCTYPE html><html><head>
-
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+"http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Crow Fest '98</title>
 <style type="text/css">
@@ -41,7 +43,7 @@ a:active {
 -->
 </style>
 <script language="JavaScript" type="text/JavaScript">
-
+<!--
 function MM_preloadImages() { //v3.0
   var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
     var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
@@ -64,65 +66,68 @@ function MM_swapImage() { //v3.0
   var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
 }
-
+//-->
 </script>
+<script type="text/javascript">window.dataLayer = window.dataLayer || [];</script></head>
 
-</head>
-
-<body onload="MM_preloadImages('imgs/tree2.gif')">
-
-<table width="812" height="1609" border="0" align="left" cellpadding="0" cellspacing="0">
-  <tbody><tr align="left" valign="top" bgcolor="#112116">
-    <td height="236" colspan="3"><img src="images/title.jpg" width="812" height="236"></td>
+<body onLoad="MM_preloadImages('imgs/tree2.gif')">
+<span><!-- Google Tag Manager -->
+<script>
+(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-NSXXFR');
+</script>
+<!-- End Google Tag Manager --><!-- Start OneTrust -->
+<script src="https://cdn.cookielaw.org/scripttemplates/otSDKStub.js" type="text/javascript" charset="UTF-8" data-domain-script="cc81fc10-5468-4b73-b37f-93a4686af46f" data-document-language="true"></script>
+<!-- End OneTrust --></span><table width="812" height="1609" border="0" align="left" cellpadding="0" cellspacing="0">
+  <tr align="left" valign="top" bgcolor="#112116">
+    <td height="236" colspan="3"><img src="imgs/title.jpg" width="812" height="236"></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
-    <td width="185" height="181"><img src="images/Crow.jpg" width="185" height="178"><br></td>
-    <td width="555"><img src="images/1for2.jpg" width="556" height="174"></td>
-    <td width="73" align="right"><a href="#" onmouseout="MM_swapImgRestore()" onmouseover="MM_swapImage('tree','','imgs/tree2.gif',1)"><img src="images/tree.gif" alt="ooooh!" name="tree" width="71" height="174" border="0"></a></td>
+    <td width="185" height="181"><img src="imgs/Crow.jpg" width="185" height="178"><br></td>
+    <td width="555"><img src="imgs/1for2.jpg" width="556" height="174"></td>
+    <td width="73" align="right"><a href="#" onMouseOut="MM_swapImgRestore()" onMouseOver="MM_swapImage('tree','','imgs/tree2.gif',1)"><img src="imgs/tree.gif" alt="ooooh!" name="tree" width="71" height="174" border="0"></a></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
-    <td height="201" colspan="3"><img src="images/stage1.jpg" width="272" height="342"><img src="images/stage2.jpg" width="267" height="342"><img src="images/stage3.jpg" width="273" height="342"></td>
+    <td height="201" colspan="3"><img src="imgs/stage1.jpg" width="272" height="342"><img src="imgs/stage2.jpg" width="267" height="342"><img src="imgs/stage3.jpg" width="273" height="342"></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
-    <td height="182" colspan="3"><img src="images/ad1.jpg" width="404" height="182"><img src="images/ad2.jpg" width="408" height="182"></td>
+    <td height="182" colspan="3"><img src="imgs/ad1.jpg" width="404" height="182"><img src="imgs/ad2.jpg" width="408" height="182"></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
-    <td height="206" colspan="3"><img src="images/ad3.jpg" width="404" height="217"><img src="images/ad4.jpg" width="129" height="217"><img src="images/ad5.jpg" width="279" height="217"></td>
+    <td height="206" colspan="3"><img src="imgs/ad3.jpg" width="404" height="217"><img src="imgs/ad4.jpg" width="129" height="217"><img src="imgs/ad5.jpg" width="279" height="217"></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
     <td height="275" colspan="3"><table width="812" height="318" border="0" cellpadding="0" cellspacing="0">
-        <tbody><tr align="left" valign="top">
-          <td height="111"><img src="images/ad6.jpg" width="479" height="130"></td>
-          <td rowspan="2"><img src="images/foundation.jpg" width="333" height="318"></td>
+        <tr align="left" valign="top">
+          <td height="111"><img src="imgs/ad6.jpg" width="479" height="130"></td>
+          <td rowspan="2"><img src="imgs/foundation.jpg" width="333" height="318"></td>
         </tr>
         <tr align="left" valign="top">
-          <td height="188"><img src="images/ad7.jpg" width="250" height="188"><img src="images/ad8.jpg" width="229" height="188"></td>
+          <td height="188"><img src="imgs/ad7.jpg" width="250" height="188"><img src="imgs/ad8.jpg" width="229" height="188"></td>
         </tr>
-    </tbody></table></td>
+    </table></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
     <td height="63" colspan="3"><br>
       <br>
       <table width="813" height="71" border="0" cellpadding="0" cellspacing="20">
-      <tbody><tr align="left" valign="middle">
-        <td width="448" valign="top"><span class="style2">©1998 THE CROW FOUNDATION<br>
+      <tr align="left" valign="middle">
+        <td width="448" valign="top"><span class="style2">&copy;1998 THE CROW FOUNDATION<br>
 The information available on this website is by no means the property of the Crow Foundation unless you do not object to it. In that case, yes, we own it. </span></td>
         <td width="365" valign="top"><span class="style4">Are you chartiable, generous, and a giving young female? Join our Crow's Back Stage Lasses Club. <a href="#">Click Here</a> for more info, and we'll work with to find an opening. </span></td>
       </tr>
-    </tbody></table></td>
+    </table></td>
   </tr>
   <tr align="left" valign="top" bgcolor="#112116">
-    <td height="14" colspan="3"> </td>
+    <td height="14" colspan="3">&nbsp;</td>
   </tr>
   <tr align="left" valign="top" bgcolor="#103120">
     <td colspan="3"><object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=6,0,29,0" width="20" height="20">
         <param name="movie" value="audio.swf">
         <param name="quality" value="high">
         <param name="BGCOLOR" value="#103120">
-        <embed src="audio.swf" width="20" height="20" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" bgcolor="#103120">
+        <embed src="audio.swf" width="20" height="20" quality="high" pluginspage="http://www.macromedia.com/go/getflashplayer" type="application/x-shockwave-flash" bgcolor="#103120"></embed>
     </object></td>
   </tr>
-</tbody></table>
-
-
-</body></html>
+</table>
+</body>
+</html>
